# ai-agent-test-01

./: main.py  pyproject.toml
agent/: langchain-dynamicmodel-test  langchain-qwen-text-test.py  langchain-server  langchain-tool-test1.py  langchain-tool-test2.py  langchainTest.py  ollamatest.py  prompt-template-test.py  qwen-text-test.py  read.txt  test.py  testollama.py
