[project]
name = "ai-agent-test-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.5",
    "langchain>=0.1.0",
    "langchain-agent>=0.1.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-experimental>=0.4.1",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "requests>=2.32.5",
]
